<resources>
    <string name="app_name">CS 408 Lab #1A</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Rock Paper Scissors</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_to_rock_paper_scissors">Welcome to Rock-Paper-Scissors!</string>
    <string name="rock">rock</string>
    <string name="player_0_computer_0">Player: 0, Computer: 0</string>
    <string name="player_used">Player used:</string>
    <string name="computer_used">Computer used:</string>
    <string name="please_choose_your_weapon">Please choose your weapon:</string>
    <string name="paper">paper</string>
    <string name="scissors">scissors</string>
</resources>